--- a/index.html
+++ b/index.html
@@ -30,6 +30,69 @@
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
         <!-- Add menu items here -->
+         <section class="Coffee">
+            <h3>Coffee</h3>
+            <ul>
+                <li><article>
+                    <h4>1st</h4>
+                    <img src="" alt="">
+                    <p>dasdada</p>
+                </article></li>
+                <li><article>
+                    <h4>2nd</h4>
+                    <img src="" alt="">
+                    <p>Sdasdsada</p>
+                </article></li>
+                <li>
+                    <article>
+                    <h4>3rd</h4>
+                    <img src="" alt="">
+                    <p>dadasda</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                    <h4>4th</h4>
+                    <img src="" alt="">
+                    <p>dasfsfs</p>
+                    </article>
+                </li>
+            </ul>
+
+         </section>
+
+         <section class="Dessert">
+            <h3>Dessert</h3>
+            <ul>
+                <li><article>
+                    <h4>1st</h4>
+                    <img src="" alt="">
+                    <p>fdsfsfs</p>
+                </article></li>
+                <li><article>
+                    <h4>
+                        2nd
+                    </h4>
+                    <img src="" alt="">
+                    <p>czxczxcz</p>
+                </article></li>
+                <li>
+                    <article>
+                    <h4>3rd</h4>
+                    <img src="" alt="">
+                    <p>daada</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                    <h4>4th</h4>
+                    <img src="" alt="">
+                    <p>saadada</p>
+                    </article>
+                </li>
+            </ul>
+
+         </section>
     </section>
 
     <section id="about" class="about">
