Added a photo of coffee menu

--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
             <h3>Coffee</h3>
             <ul>
                 <li><article>
-                    <h4>1st</h4>
-                    <img src="" alt="">
-                    <p>dasdada</p>
+                    <h4>Latte</h4>
+                    <img src="img/coffee/coffee5.jpg" alt="kapi">
+                    <p>150P</p>
                 </article></li>
                 <li><article>
-                    <h4>2nd</h4>
-                    <img src="" alt="">
-                    <p>Sdasdsada</p>
+                    <h4>Black kopi</h4>
+                    <img src="img/coffee/coffee2.jpg" alt="kapi2">
+                    <p>135P</p>
                 </article></li>
                 <li>
                     <article>
-                    <h4>3rd</h4>
-                    <img src="" alt="">
-                    <p>dadasda</p>
+                    <h4>Love birb kopi</h4>
+                    <img src="img/coffee/coffee6.jpg" alt="kapi3">
+                    <p>180P</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                    <h4>4th</h4>
-                    <img src="" alt="">
-                    <p>dasfsfs</p>
+                    <h4>Kopicinno</h4>
+                    <img src="img/coffee/coffee4.jpg" alt="kapi4">
+                    <p>155P</p>
                     </article>
                 </li>
             </ul>
