added a menu for dessert

--- a/index.html
+++ b/index.html
@@ -65,29 +65,27 @@
             <h3>Dessert</h3>
             <ul>
                 <li><article>
-                    <h4>1st</h4>
-                    <img src="" alt="">
-                    <p>fdsfsfs</p>
+                    <h4>Pankick</h4>
+                    <img src="img/dessert/pexels-sheenawood-574111.jpg" alt="pankick">
+                    <p>170P</p>
                 </article></li>
                 <li><article>
-                    <h4>
-                        2nd
-                    </h4>
-                    <img src="" alt="">
-                    <p>czxczxcz</p>
+                    <h4>Bread</h4>
+                    <img src="img/dessert/bread.jpg" alt="bread">
+                    <p>130P</p>
                 </article></li>
                 <li>
                     <article>
-                    <h4>3rd</h4>
-                    <img src="" alt="">
-                    <p>daada</p>
+                    <h4>Sunwich</h4>
+                    <img src="img/dessert/sandwich.jpg" alt="sandwich">
+                    <p>150P</p>
                     </article>
                 </li>
                 <li>
                     <article>
-                    <h4>4th</h4>
-                    <img src="" alt="">
-                    <p>saadada</p>
+                    <h4>Peanot</h4>
+                    <img src="img/dessert/pinut.jpg" alt="mani">
+                    <p>250P</p>
                     </article>
                 </li>
             </ul>
