modified coffe and dessert menu

--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
             <ul>
                 <li><article>
                     <h4>Latte</h4>
-                    <img src="img/coffee/coffee5.jpg" alt="kapi">
+                    <img src="img/coffee/coffee11.png" alt="kapi">
                     <p>150P</p>
                 </article></li>
                 <li><article>
                     <h4>Black kopi</h4>
-                    <img src="img/coffee/coffee2.jpg" alt="kapi2">
+                    <img src="img/coffee/coffee22.png" alt="kapi2">
                     <p>135P</p>
                 </article></li>
                 <li>
                     <article>
                     <h4>Love birb kopi</h4>
-                    <img src="img/coffee/coffee6.jpg" alt="kapi3">
+                    <img src="img/coffee/coffee66.png" alt="kapi3">
                     <p>180P</p>
                     </article>
                 </li>
                 <li>
                     <article>
                     <h4>Kopicinno</h4>
-                    <img src="img/coffee/coffee4.jpg" alt="kapi4">
+                    <img src="img/coffee/coffee44.png" alt="kapi4">
                     <p>155P</p>
                     </article>
                 </li>
@@ -66,25 +66,25 @@
             <ul>
                 <li><article>
                     <h4>Pankick</h4>
-                    <img src="img/dessert/pexels-sheenawood-574111.jpg" alt="pankick">
+                    <img src="img/dessert/pancake1.png" alt="pankick">
                     <p>170P</p>
                 </article></li>
                 <li><article>
                     <h4>Bread</h4>
-                    <img src="img/dessert/bread.jpg" alt="bread">
+                    <img src="img/dessert/bread1.png" alt="bread">
                     <p>130P</p>
                 </article></li>
                 <li>
                     <article>
                     <h4>Sunwich</h4>
-                    <img src="img/dessert/sandwich.jpg" alt="sandwich">
+                    <img src="img/dessert/sandwich1.png" alt="sandwich">
                     <p>150P</p>
                     </article>
                 </li>
                 <li>
                     <article>
                     <h4>Peanot</h4>
-                    <img src="img/dessert/pinut.jpg" alt="mani">
+                    <img src="img/dessert/pinut1.png" alt="mani">
                     <p>250P</p>
                     </article>
                 </li>
